[package]
name = "hdifinder"
description = "A CLI tool to check if a bitcoin address belongs to HD Wallet from a mnemonic phrase"
version = "0.1.0"
authors = ["Nelson Herbin <nelson@herbin.info>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Asone/hdifinder"
keywords = ["bitcoin", "hdwallet","wallet","mnemonic"]
categories = ["command-line-utilities"]
homepage = "https://github.com/Asone/hdifinder"
documentation = "https://github.com/Asone/hdifinder"

[dependencies]
clap = "2.33.3"
assert_cmd = "2.0.1"
predicates = "2.0.2"
hdpath = { version = "0.6.0", features = ["with-bitcoin"] }
secp256k1 = "0.20.3"
bitcoin = "0.27.0"
bip39 = "1.0.1"
rayon = "1.5"